--- a/package.json
+++ b/package.json
@@ -8,8 +8,12 @@
   "dependencies": {
     "@types/react": "^17.0.83",
     "@types/react-dom": "^17.0.26",
+    "@types/styled-components": "^5.1.34",
+    "dexie": "^3.2.7",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-markdown": "^6.0.3",
+    "styled-components": "^5.3.11",
     "ts-loader": "^9.1.2",
     "typescript": "^4.9.5",
     "webpack": "^5.97.1",
